# ROS2Workshop

./: .gitignore  FACILITATOR_SCRIPT.md  LICENSE  Makefile  README.md  dev.sh  virtualdisplay.sh
.devcontainer/: Dockerfile  devcontainer.json
install/: local_setup.sh  setup.sh
install/my_py_pkg/lib/my_py_pkg/: listener  talker
install/my_py_pkg/share/my_py_pkg/: package.sh
log/: latest_build
src/my_pkg/: CMakeLists.txt  package.xml
src/my_pkg/src/: template.cpp
src/my_py_pkg/: package.xml  setup.py
src/my_py_pkg/launch/: talker_listener.launch.py
