<?xml version="1.0"?>
<package format="3">
    <name>my_pkg</name>
    <version>0.0.1</version>
    <description>Minimal scaffold for ROS 2 workshop (C++)</description>
    <maintainer email="you@example.com">Workshop</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>rclcpp</depend>
    <depend>std_msgs</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
