<?xml version="1.0"?>
<package format="3">
  <name>my_py_pkg</name>
  <version>0.0.1</version>
  <description>Simple ROS 2 Python talker/listener for workshop</description>
  <maintainer email="you@example.com">Workshop</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
